--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body id="topo">
     <header class="cabecalho">
         <div>
-            <a href="index2.html">
+            <a href="#">
                 <img src="assets/img/MeusAnimes.svg" alt="Meus Animes" class="logo">
             </a>
         </div>
@@ -136,7 +136,7 @@
                 </form>
                 
             </div>
-                <img src="assets/img/WhatsApp Image 2025-09-30 at 19.25.30.jpeg" alt="">
+                
         </section>
     </main>
 
