--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <title>Meus Animes</title>
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="shortcut icon" href="../meus animes/assets/img/MeusAnimes.svg" type="image/x-icon">
